--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "elci-api",
+  "name": "server",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
